<?xml version="1.0" encoding="utf-8"?>
<resources>

       <!-- Global Strings -->
    <string name="app_name">Snaphunt</string>
    <string name="server_root"></string>

    <!-- Account Authenticator -->
    <string name="authenticator_account_type">Snaphunt</string>

    <!-- Login Activity Strings -->
    <string name="login_button">Login</string>
    <string name="login_title">Login</string>
    <string name="register_button">Create Account</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="facebook_register">Sign up through Facebook</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="register_title">Register</string>
    <string name="valid_email">Invalid Email Format.</string>
    <string name="valid_password">Password [8-30 length] must contain at least 1 digit, 1 uppercase, and 1 lowercase letter. No spaces.</string>
    <string name="valid_username">Username [3-20 length] must only contain letters, digits, hyphen, and underscores.</string>

    <!-- TODO Categorize-->
    <!-- Uncategorized -->
    <string name="games_pager_title">Games</string>
    <string name="invites_pager_title">Invites</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="new_game">New Game</string>
    <string name="theme_selector_heading">You\'re the Judge! \\n Pick the theme:</string>
    <string name="empty_game_list">You have no Games.</string>
    <string name="submit_photo">Submit Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="gameNameTitle">Game Name</string>
    <string name="numberOfRoundsTitle">Number Of Rounds</string>
    <string name="roundTimeLimitTitle">Round Time Limit</string>
    <string name="invitePlayersTitle">Invite Players</string>
    <string name="startGame">Start Game</string>
    <string name="empty_invite_list">You have no Invites.</string>
    <string name="pick_winner">Pick as Winning Photo</string>
    <string name="gameNotStarted">Game Not Started</string>
    <string name="roundNotStarted">Wating for players to join...</string>
    <string name="needToSubmitPhoto">Submit a photo!</string>
    <string name="waitingForPhotos">You are Judge. Waiting for Player Photos...</string>
    <string name="waitingForJudge">Waiting for Judge to Pick Photo...</string>
    <string name="roundEnded">Round Ended</string>
    <string name="selectAPhoto">Select a Winning Photo...</string>
    <string name="waitingForTheme">Waiting For Theme Selection...</string>
    <string name="judgePickTheme">Select Theme!</string>
    <string name="autoRefresh">Auto-Refresh</string>

    <!-- Facebook-->
    <string name="facebook_app_id">725276490840467</string>
</resources>
