<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_account_container"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_title"
        android:id="@+id/register_title"
        android:layout_centerVertical="true"
        android:layout_above="@+id/register_email"
        android:layout_margin="2dp"
         />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_username"
        android:hint="@string/username_hint"
        android:layout_above="@+id/register_password"
        android:layout_alignLeft="@+id/register_password"
        android:layout_alignStart="@+id/register_password"
        android:layout_alignRight="@+id/register_password"
        android:layout_alignEnd="@+id/register_password"
        android:singleLine="true"
        android:imeOptions="flagNoExtractUi"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_password"
        android:hint="@string/password_hint"
        android:layout_above="@+id/register_submit_button"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:imeOptions="flagNoExtractUi"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:id="@+id/register_submit_button"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/facebook_register_text"
        android:layout_alignLeft="@+id/register_password"
        android:layout_alignStart="@+id/register_password"
        android:layout_alignRight="@+id/register_password"
        android:layout_alignEnd="@+id/register_password"
        android:onClick="onRegisterSubmit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/facebook_register_text"
        android:text="@string/facebook_register"
        android:layout_marginTop="8dp"
        android:textSize="12dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/register_email"
        android:layout_above="@+id/register_username"
        android:layout_alignLeft="@+id/register_username"
        android:layout_alignStart="@+id/register_username"
        android:hint="@string/email_hint"
        android:imeOptions="flagNoExtractUi"
        />
</RelativeLayout>